# dunning-kruger

./: .gitignore  README.md  app.py  dunning-kruger.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
