[project]
name = "dunning-kruger"
version = "0.1.0"
description = "Random number simulation of the Dunning-Kruger experiment."
authors = [
    {name = "Evgeny Ivanov", email = "ivanov.evgeny.n@gmail.com"},
]
dependencies = [
    "altair>=5,<6",
    "numpy>=2,<3",
    "polars>=1,<2",
    "streamlit>=1,<2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = ["ruff", "pyright"]

[tool.pdm.scripts]
app = "streamlit run app.py"
lint = "ruff check ."
type = "pyright"


[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false


[tool.ruff]
[tool.ruff.lint]
select = [
    "A", "ANN", "ARG", "B", "C4", "C90", "COM", "DTZ", "E", "ERA", "F",
    "I", "ICN", "INP", "N", "PL", "PT", "RET", "RSE", "RUF", "Q", "SIM",
    "SLF", "TCH", "TID", "TRY", "UP", "W",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"
